k8s/apps/homarr/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr-loadbalancer
  namespace: homarr
  labels:
    app: homarr
spec:
  type: LoadBalancer
  selector:
    app: homarr
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
