k8s/apps/homarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: homarr
  labels:
    app: homarr
spec:
  type: ClusterIP
  selector:
    app: homarr
  ports:
    - name: http
      port: 7575
      targetPort: http
      protocol: TCP
